Sign up and sign in done

--- a/CarRentalManagementSystem.Web/Web.config
+++ b/CarRentalManagementSystem.Web/Web.config
@@ -11,10 +11,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
-	  <authentication mode="Forms">
-		  <forms loginUrl="~/LogInAndSignUp/LogInView"></forms>
-	  </authentication>
-	  <compilation debug="true" targetFramework="4.7.2"/>
+      <authentication mode="Forms">
+          <forms loginUrl="~/LogInAndSignUp/LogInView"></forms>
+      </authentication>
+      <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
   </system.web>
   <runtime>
@@ -43,16 +43,59 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+	<system.diagnostics>
+		<sources>
+			<source name="System.ServiceModel.MessageLogging">
+				<listeners>
+					<add name="messages"
+       type="System.Diagnostics.XmlWriterTraceListener"
+       initializeData="D:\Masaüstü\Yeni Klasör\CarRentalManagementSystem\CarRentalManagementSystem.WebService\CarRentalManagementSystem.WebService\obj\Debug\Logs\messages.txt"/>
+				</listeners>
+			</source>
+		</sources>
+	</system.diagnostics>
   <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="CustomerWebServiceSoap" />
-      </basicHttpBinding>
-    </bindings>
+	  
+			  <diagnostics>
+		  <messageLogging
+      logEntireMessage="true"
+      logMalformedMessages="false"
+      logMessagesAtServiceLevel="true"
+      logMessagesAtTransportLevel="true"
+      maxMessagesToLog="3000"
+      maxSizeOfMessageToLog="2000"/>
+	  </diagnostics>
+	  <bindings>
+    <basicHttpBinding>
+     <binding name="CustomerWebServiceSoap" />
+     <binding name="EmployeesWebServiceSoap" />
+     <binding name="RentalRequestWebServiceSoap" />
+     <binding name="CompanyWebServiceSoap" />
+     <binding name="RentedVehiclesWebServiceSoap" />
+     <binding name="VehiclesWebServiceSoap" />
+    </basicHttpBinding>
+   </bindings>
     <client>
       <endpoint address="http://localhost:56717/CustomerWebService.asmx"
         binding="basicHttpBinding" bindingConfiguration="CustomerWebServiceSoap"
         contract="CustomerWebService.CustomerWebServiceSoap" name="CustomerWebServiceSoap" />
+      <endpoint address="http://localhost:56717/EmployeesWebService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="EmployeesWebServiceSoap"
+        contract="EmployeeWebService.EmployeesWebServiceSoap" name="EmployeesWebServiceSoap" />
+      <endpoint address="http://localhost:56717/RentalRequestWebService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="RentalRequestWebServiceSoap"
+        contract="RentalRequestWebService.RentalRequestWebServiceSoap"
+        name="RentalRequestWebServiceSoap" />
+      <endpoint address="http://localhost:56717/CompaniesWebService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="CompanyWebServiceSoap"
+        contract="CompanyWebService.CompanyWebServiceSoap" name="CompanyWebServiceSoap" />
+      <endpoint address="http://localhost:56717/RentedVehiclesWebService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="RentedVehiclesWebServiceSoap"
+        contract="RentedVehicleService.RentedVehiclesWebServiceSoap"
+        name="RentedVehiclesWebServiceSoap" />
+      <endpoint address="http://localhost:56717/VehiclesWebService.asmx"
+        binding="basicHttpBinding" bindingConfiguration="VehiclesWebServiceSoap"
+        contract="VehicleWebService.VehiclesWebServiceSoap" name="VehiclesWebServiceSoap" />
     </client>
   </system.serviceModel>
 </configuration>
