--- a/CarRentalManagementSystem.Web/CarRentalManagementSystem.Web.csproj
+++ b/CarRentalManagementSystem.Web/CarRentalManagementSystem.Web.csproj
@@ -15,7 +15,7 @@
     <AssemblyName>CarRentalManagementSystem.Web</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
-    <Use64BitIISExpress />
+    <Use64BitIISExpress>false</Use64BitIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -52,9 +52,35 @@
     <Reference Include="CarRentalManagementSystem.WebService">
       <HintPath>..\..\CarRentalManagementSystem.WebService\CarRentalManagementSystem.WebService\bin\CarRentalManagementSystem.WebService.dll</HintPath>
     </Reference>
+    <Reference Include="IdentityModel, Version=4.4.0.0, Culture=neutral, PublicKeyToken=e7877f4675df049f, processorArchitecture=MSIL">
+      <HintPath>..\packages\IdentityModel.4.4.0\lib\net472\IdentityModel.dll</HintPath>
+    </Reference>
+    <Reference Include="IdentityServer4.Storage, Version=4.1.1.0, Culture=neutral, PublicKeyToken=f294d0afe402bb2b, processorArchitecture=MSIL">
+      <HintPath>..\packages\IdentityServer4.Storage.4.1.1\lib\netstandard2.0\IdentityServer4.Storage.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Buffers, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Buffers.4.4.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Memory.4.5.3\lib\netstandard2.0\System.Memory.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Numerics.Vectors.4.4.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Text.Encodings.Web, Version=4.0.5.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Text.Encodings.Web.4.7.0\lib\netstandard2.0\System.Text.Encodings.Web.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -99,6 +125,31 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Connected Services\CompanyWebService\CarRentalManagementSystem.Web.CompanyWebService.Companies.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\CompanyWebService\CarRentalManagementSystem.Web.CompanyWebService.GetAllCompaniesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\CompanyWebService\CarRentalManagementSystem.Web.CompanyWebService.GetCompanyInformationByIDResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\CompanyWebService\CarRentalManagementSystem.Web.CompanyWebService.LogInAsCompanyResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\CompanyWebService\CarRentalManagementSystem.Web.CompanyWebService.SignUpAsCompanyResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\CompanyWebService\CarRentalManagementSystem.Web.CompanyWebService.UpdateAccountResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <None Include="Connected Services\CompanyWebService\CompaniesWebService.disco" />
+    <None Include="Connected Services\CompanyWebService\configuration91.svcinfo" />
+    <None Include="Connected Services\CompanyWebService\configuration.svcinfo" />
+    <None Include="Connected Services\CompanyWebService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Connected Services\CustomerWebService\CarRentalManagementSystem.Web.CustomerWebService.Customers.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
@@ -117,6 +168,7 @@
     <Content Include="Connected Services\CustomerWebService\CarRentalManagementSystem.Web.CustomerWebService.UpdateAccountResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
+    <None Include="Connected Services\CompanyWebService\CompaniesWebService.wsdl" />
     <None Include="Connected Services\CustomerWebService\CustomerWebService.disco" />
     <None Include="Connected Services\CustomerWebService\configuration91.svcinfo" />
     <None Include="Connected Services\CustomerWebService\configuration.svcinfo" />
@@ -124,15 +176,150 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <Content Include="Connected Services\EmployeeWebService\CarRentalManagementSystem.Web.EmployeeWebService.Employees.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\EmployeeWebService\CarRentalManagementSystem.Web.EmployeeWebService.GetAllEmployeesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\EmployeeWebService\CarRentalManagementSystem.Web.EmployeeWebService.GetCompanysAllEmployeesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\EmployeeWebService\CarRentalManagementSystem.Web.EmployeeWebService.GetEmployeeInformationByIDResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\EmployeeWebService\CarRentalManagementSystem.Web.EmployeeWebService.LogInAsEmployeeResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\EmployeeWebService\CarRentalManagementSystem.Web.EmployeeWebService.SignUpAsEmployeeResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\EmployeeWebService\CarRentalManagementSystem.Web.EmployeeWebService.UpdateAccountResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <None Include="Connected Services\EmployeeWebService\EmployeesWebService.disco" />
+    <None Include="Connected Services\EmployeeWebService\configuration91.svcinfo" />
+    <None Include="Connected Services\EmployeeWebService\configuration.svcinfo" />
+    <None Include="Connected Services\EmployeeWebService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <Content Include="Connected Services\RentalRequestWebService\CarRentalManagementSystem.Web.RentalRequestWebService.GetCompanysRentalRequestsResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\RentalRequestWebService\CarRentalManagementSystem.Web.RentalRequestWebService.GetCustomersRentalRequestsResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\RentalRequestWebService\CarRentalManagementSystem.Web.RentalRequestWebService.GetRentalRequestByIDResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\RentalRequestWebService\CarRentalManagementSystem.Web.RentalRequestWebService.GetRentalRequestsResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\RentalRequestWebService\CarRentalManagementSystem.Web.RentalRequestWebService.MakeRentalRequestResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\RentalRequestWebService\CarRentalManagementSystem.Web.RentalRequestWebService.RentalRequests.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\RentalRequestWebService\CarRentalManagementSystem.Web.RentalRequestWebService.UpdateRentalRequestResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <None Include="Connected Services\RentalRequestWebService\RentalRequestWebService.disco" />
+    <None Include="Connected Services\RentalRequestWebService\configuration91.svcinfo" />
+    <None Include="Connected Services\RentalRequestWebService\configuration.svcinfo" />
+    <None Include="Connected Services\RentalRequestWebService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <Content Include="Connected Services\RentedVehicleService\CarRentalManagementSystem.Web.RentedVehicleService.GetCompanysRentedVehiclesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\RentedVehicleService\CarRentalManagementSystem.Web.RentedVehicleService.GetCustomersRentedVehiclesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\RentedVehicleService\CarRentalManagementSystem.Web.RentedVehicleService.GetRentedVehicleByIdResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\RentedVehicleService\CarRentalManagementSystem.Web.RentedVehicleService.RentedVehicles.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\RentedVehicleService\CarRentalManagementSystem.Web.RentedVehicleService.RentVehicleResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <None Include="Connected Services\RentedVehicleService\RentedVehiclesWebService.disco" />
+    <None Include="Connected Services\RentedVehicleService\configuration91.svcinfo" />
+    <None Include="Connected Services\RentedVehicleService\configuration.svcinfo" />
+    <None Include="Connected Services\RentedVehicleService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <Content Include="Connected Services\VehicleWebService\CarRentalManagementSystem.Web.VehicleWebService.AddVehicleResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\VehicleWebService\CarRentalManagementSystem.Web.VehicleWebService.GetAllAvaliableVehiclesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\VehicleWebService\CarRentalManagementSystem.Web.VehicleWebService.GetCompanysAllRentedVehiclesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\VehicleWebService\CarRentalManagementSystem.Web.VehicleWebService.GetCompanysAllVehiclesResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\VehicleWebService\CarRentalManagementSystem.Web.VehicleWebService.GetVehicleByIDResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\VehicleWebService\CarRentalManagementSystem.Web.VehicleWebService.RentedVehicles.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\VehicleWebService\CarRentalManagementSystem.Web.VehicleWebService.UpdateVehicleResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\VehicleWebService\CarRentalManagementSystem.Web.VehicleWebService.Vehicles.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <None Include="Connected Services\VehicleWebService\VehiclesWebService.disco" />
+    <None Include="Connected Services\VehicleWebService\configuration91.svcinfo" />
+    <None Include="Connected Services\VehicleWebService\configuration.svcinfo" />
+    <None Include="Connected Services\VehicleWebService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Contents\EmployeesMainPages.css" />
     <Content Include="Contents\Images\Image20210121173512.jpg" />
     <Content Include="Contents\LogInAndSignUpCSS.css" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\jquery-3.5.1.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Connected Services\CompanyWebService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Connected Services\CustomerWebService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\EmployeeWebService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\RentalRequestWebService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\RentedVehicleService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\VehicleWebService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -144,16 +331,25 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
     <None Include="Connected Services\CustomerWebService\CustomerWebService.wsdl" />
+    <None Include="Connected Services\EmployeeWebService\EmployeesWebService.wsdl" />
+    <None Include="Connected Services\RentalRequestWebService\RentalRequestWebService.wsdl" />
+    <None Include="Connected Services\RentedVehicleService\RentedVehiclesWebService.wsdl" />
+    <None Include="Connected Services\VehicleWebService\VehiclesWebService.wsdl" />
     <None Include="packages.config" />
     <Content Include="Views\LogInAndSignUp\LogInView.cshtml" />
     <Content Include="Views\Customer\CustomerView.cshtml" />
     <Content Include="Views\LogInAndSignUp\SignUpAs.cshtml" />
     <Content Include="Views\Customer\SignUpAsCustomerView.cshtml" />
+    <Content Include="Views\Employee\EmployeesMainPageView.cshtml" />
+    <Content Include="Scripts\jquery-3.5.1.js" />
+    <Content Include="Views\Company\CompanyView.cshtml" />
+    <Content Include="Views\Company\SignUpAsCompany.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -163,10 +359,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
-    <Folder Include="Scripts\" />
-    <Folder Include="Views\Company\" />
-    <Folder Include="Views\Employee\" />
     <Folder Include="Views\Home\" />
     <Folder Include="Views\Shared\" />
   </ItemGroup>
@@ -174,7 +366,12 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\CompanyWebService\" />
     <WCFMetadataStorage Include="Connected Services\CustomerWebService\" />
+    <WCFMetadataStorage Include="Connected Services\EmployeeWebService\" />
+    <WCFMetadataStorage Include="Connected Services\RentalRequestWebService\" />
+    <WCFMetadataStorage Include="Connected Services\RentedVehicleService\" />
+    <WCFMetadataStorage Include="Connected Services\VehicleWebService\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
