--- a/CarRentalManagementSystem.Web/Web.config
+++ b/CarRentalManagementSystem.Web/Web.config
@@ -44,15 +44,7 @@
     </compilers>
   </system.codedom>
   <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="CustomerWebServiceSoap" />
-      </basicHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="http://localhost:56717/CustomerWebService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="CustomerWebServiceSoap"
-        contract="CustomerWebService.CustomerWebServiceSoap" name="CustomerWebServiceSoap" />
-    </client>
+    <bindings />
+    <client />
   </system.serviceModel>
 </configuration>
